--- a/server/views/development/editor.pug
+++ b/server/views/development/editor.pug
@@ -7,11 +7,6 @@ html
     meta(name='viewport', content='user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width')
     meta(name='mobile-web-app-capable', content='yes')
     meta(name='msapplication-tap-highlight', content='no')
-    link(href='assets/styles/global.css' rel='stylesheet')
-    link(href='assets/styles/widgets.css' rel='stylesheet')
-    link(href='assets/styles/editor.css' rel='stylesheet')
-    link(href='assets/styles/blueprint.css' rel='stylesheet')
-    link(href='https://fonts.googleapis.com/css?family=Ubuntu:400,500,700' rel='stylesheet')
 
 
 
@@ -20,4 +15,4 @@ html
     div(id='app')
     script.
       window.__APP_STATE__ = !{state};
-    script(src='build/bundle.js')
+    script(src='http://192.168.1.10:9001/bundle.js')
