--- a/server/views/development/editor.pug
+++ b/server/views/development/editor.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title DashboardEditor House
+    title DashboardEditor
     meta(charset='utf-8')
     meta(name='format-detection', content='telephone=no')
     meta(name='viewport', content='user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width')
@@ -9,8 +9,7 @@ html
     meta(name='msapplication-tap-highlight', content='no')
 
 
-
-    body
+  body
     div(id='app')
     script.
       window.__APP_STATE__ = !{state};
