--- a/src/editor/styles.scss
+++ b/src/editor/styles.scss
@@ -34,4 +34,15 @@
   }
 }
 
+.selected-widget {
+  border: {
+    style: solid;
+    width: 2px;
+    color: red;
+  }
+
+
+
+}
+
 .hidden { display: none!important;}
