--- a/src/widgets/SwitchWidget/_switch-widget.scss
+++ b/src/widgets/SwitchWidget/_switch-widget.scss
@@ -13,8 +13,8 @@
       font-size: 18px;
       line-height: 1em;
       padding: {
-        left:   1.25em;
-        right:  1.25em;
+        left:   1rem;
+        right:  1rem;
       }
 
     }
