--- a/server/views/development/dashboard.pug
+++ b/server/views/development/dashboard.pug
@@ -7,8 +7,7 @@ html
     meta(name='viewport', content="width=device-width, initial-scale=1.0, user-scalable=no")
     meta(name='mobile-web-app-capable', content='yes')
     meta(name='msapplication-tap-highlight', content='no')
-
-
+    link(rel="manifest", href=`/public/manifest/${manifestType}.json`)
   body
     div(id='app')
     script.
