--- a/src/styles/_flexbox-grid.scss
+++ b/src/styles/_flexbox-grid.scss
@@ -38,6 +38,15 @@
   flex-wrap: wrap;
 
 }
+
+
+
+.column {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .row-flexbox {
   box-sizing: border-box;
   display: flex;
