--- a/src/widgets/widgets.scss
+++ b/src/widgets/widgets.scss
@@ -1,10 +1,36 @@
 @import '../styles/widget-fonts';
-
+@import 'WeatherWidgets/components/Icon/weather_icon';
 @import 'components/Toggle/toggle_switch';
 @import 'SwitchWidget/switch-widget';
 
 .widget {
+  display: flex;
   font-size: inherit;
+  height: 100%;
+  width: 100%;
+}
+.weather {
+  font-size: inherit;
+  padding: {
+    top: 10px;
+    bottom: 5px;
+    left: 10px;
+    right: 10px;
+
+  }
+
+
+  .icon {
+    font-weight: 400;
+
+  }
+
+  .temp {
+    font-size: 1.5em;
+    font-weight: 500;  }
+
+
+
 }
 
 
