--- a/src/editor/styles/_left_panel.scss
+++ b/src/editor/styles/_left_panel.scss
@@ -95,3 +95,11 @@
     padding-right: 5px!important;
   }
 }
+
+.settings-row.first {
+  margin-top: 5px;
+  border-top-color: white!important;
+  border-top-style: solid;
+  border-top-width: 1px;
+
+}
